<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

            <group android:checkableBehavior="single">
                <item
                    android:icon="@drawable/home"
                    android:id="@+id/nav_home"
                    android:title="@string/nav_home"/>

                <item
                    android:icon="@drawable/ufo"
                    android:id="@+id/genre_scifi"
                    android:title="@string/scifi"/>
                <item
                    android:icon="@drawable/bok"
                    android:id="@+id/genre_novel"
                    android:title="@string/novel"/>
                <item
                    android:icon="@drawable/paper"
                    android:id="@+id/genre_poem"
                    android:title="@string/poem"/>
                <item
                    android:icon="@drawable/tab_selector"
                    android:id="@+id/loginMenu"
                    android:title="Login"/>
            </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:icon="@drawable/about"
                android:id="@+id/nav_about_us"
                android:title="@string/about_us"/>
        </menu>
    </item>

</menu>