<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/layoutBookRecycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <ImageView
                android:id="@+id/bookIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/bookIcon"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/noOfPages"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/bookIcon"
                android:layout_marginTop="4dp"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/bookName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/bookIcon"
                android:hint="@string/name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="#27ae60"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/bookAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/bookName"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/bookIcon"
                android:hint="@string/author"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="#000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/bookDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/bookAuthor"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/bookIcon"
                android:hint="@string/descr"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="#000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/rateCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/rateBook"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@+id/rateBook"
                android:width="100dp"
                android:textSize="19sp" />

            <ImageButton
                android:contentDescription="@string/ratecd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/cardview_light_background"
                android:src="@mipmap/ic_ratebook"
                android:id="@+id/rateBook"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/bookDescription"/>


        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>